--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "7.1.0",
+    "@capacitor/core": "7.4.4",
+    "@capacitor/haptics": "7.0.2",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/keyboard": "7.0.3",
+    "@capacitor/status-bar": "7.0.3",
+    "@ionic/cli": "^7.2.1",
     "@supabase/supabase-js": "^2.81.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -19,6 +27,7 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "7.4.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
